<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ScreenThreeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        tools:ignore="UselessLeaf,UselessParent">

        <ImageView
            android:id="@+id/iv_back_screen_to_screen_two"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:src="@drawable/back_screen"
            android:padding="18dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/screen_03"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

    </RelativeLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@color/colorPrimaryDark"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/blue"
            android:padding="20dp"
            android:textStyle="bold"
            android:lineSpacingExtra="5dp"
            android:text="@string/android_def"/>
    </FrameLayout>


    <Button
        android:id="@+id/back_to_screen_one"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/black"
        android:text="@string/back_to_screen_01"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold|italic"/>

</LinearLayout>