<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ScreenTwoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        tools:ignore="UselessLeaf,UselessParent">

        <ImageView
            android:id="@+id/iv_back_screen"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:src="@drawable/back_screen"
            android:padding="18dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/screen_02"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/middle_container"
            android:layout_marginBottom="20dp"
            android:text="@string/log_in"
            android:textSize="25sp"
            android:textStyle="italic|bold"
            android:textColor="@color/colorPrimaryDark"/>

        <LinearLayout
            android:id="@+id/middle_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="40dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="textEmailAddress"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:hint="Email"
                android:gravity="center"
                tools:ignore="Autofill,HardcodedText" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:hint="Password"
                android:gravity="center"
                tools:ignore="Autofill,HardcodedText" />


            <Button
                android:id="@+id/go_to_screen_03"
                android:layout_width="130dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/next"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold|italic"
                android:background="@color/black"
                android:includeFontPadding="false"
                />
        </LinearLayout>

    </RelativeLayout>



</LinearLayout>